outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval1919551347932115664_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scoring system that combines local proximity with global connectivity through a hybrid weight adjustment mechanism, while introducing a novel flow disruption penalty that scales non-linearly with exploration progress and node centrality, to balance exploration and exploitation more effectively.}
                                                                                                                                                                                                                                                                                                                      ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scoring system that combines local proximity with global connectivity through a hybrid weight adjustment mechanism, while introducing a novel flow disruption penalty that scales non-linearly with exploration progress and node centrality, to balance exploration and exploitation more effectively.}
                                                                                                                                                                                                                                                                                                                      ^
SyntaxError: unmatched '}'
